# rag-jfk

./: .gitignore  Dockerfile  README.md  cloud_rag.ipynb  config.yml  docker-compose.yml  entrypoint.sh  extract.py  local_rag.ipynb  pyproject.toml  rag1.ipynb  subset_speeches.py
.github/workflows/: deploy.yml
app/: main.py  prompt.txt  rag.py
notebooks/: rag_jfk1.ipynb  rag_jfk2.ipynb
scripts/: extract.py  load.py
